# medusa

./: CMakeLists.txt  CameraTypes.hpp  LICENSE  README.md  WorkLoad.cpp  WorkLoad.hpp  main.cpp
algo/: PointGeneration.hpp  QuickHull.hpp
example/: test.json
images/: Filtering.hpp  Segmentation.hpp
models/: WaveformObjFile.hpp
